Bug 1407059 - GECKO_DISPLAY_REFLOW_PROCESSES=a/p/c enables reflow logging in chosen processes - r=dbaron

GECKO_DISPLAY_REFLOW_RULES_FILE doesn't work when the sandbox prevents access
to the rules file.
Added mention to try `--setpref security.sandbox.content.level=2` to lower
sandbox defenses.

As a workaround, and because in most cases the rules are only "* 1" (log
everything), a new env-var GECKO_DISPLAY_REFLOW_PROCESSES=a/p/c enables all
reflow logging without needing a rules file.

It also adds the choice of which processes have logging enabled, based on the
giving letter:
- a: All processes,
- p: Parent process,
- c: Content processes.

MozReview-Commit-ID: 9ymjtuXoF9r

--HG--
extra : rebase_source : fc164bf7c1982ff163b5f6276f341b497dfed961